--- a/Engine/Engine/Engine.vcxproj
+++ b/Engine/Engine/Engine.vcxproj
@@ -29,7 +29,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -120,6 +120,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="objectManager.cpp" />
     <ClCompile Include="resourceManager.cpp" />
+    <ClCompile Include="wndInit.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gameObject.h" />
