--- a/OpenGL_Testx64/MantiEngine/MantiEngine.vcxproj.filters
+++ b/OpenGL_Testx64/MantiEngine/MantiEngine.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Mesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Model.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
