Подготовительные работы к мешам

--- a/Engine/Engine/Engine.vcxproj
+++ b/Engine/Engine/Engine.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="Importer.cpp" />
     <ClCompile Include="Location.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Scripts.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="WinApi.cpp" />
@@ -38,6 +39,7 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Importer.h" />
     <ClInclude Include="Location.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="Project.h" />
     <ClInclude Include="Scripts.h" />
     <ClInclude Include="Shader.h" />
