--- a/Engine/Engine/Engine.vcxproj
+++ b/Engine/Engine/Engine.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Compilation.cpp" />
+    <ClCompile Include="Config.cpp" />
     <ClCompile Include="FontObject.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="imgui.cpp" />
@@ -29,15 +30,14 @@
     <ClCompile Include="imgui_impl_win32.cpp" />
     <ClCompile Include="imgui_widgets.cpp" />
     <ClCompile Include="Importer.cpp" />
+    <ClCompile Include="Interface.cpp" />
     <ClCompile Include="Location.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Project.cpp" />
     <ClCompile Include="Script.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Vector.cpp" />
-    <ClCompile Include="temp.cpp" />
-    <ClCompile Include="Project.cpp" />
-    <ClCompile Include="WinApi.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
@@ -52,14 +52,13 @@
     <ClInclude Include="imstb_rectpack.h" />
     <ClInclude Include="imstb_textedit.h" />
     <ClInclude Include="imstb_truetype.h" />
+    <ClInclude Include="Interface.h" />
     <ClInclude Include="Location.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Project.h" />
     <ClInclude Include="Script.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Vector.h" />
-    <ClInclude Include="temp.h" />
-    <ClInclude Include="WinApi.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
