Добавлена компиляция игрового проекта. Вроде работает. Добавлен проект dll библиотеки. В нем будет находиться реализация функций движка необходимых для игры.

--- a/Engine/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine/Engine.vcxproj.filters
@@ -146,5 +146,8 @@
     <ClInclude Include="Config.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Compilation.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
