Интерфейс, ускорение bmp, графическое взаимодействие с объектами.

--- a/Engine/Engine/imgui.ini
+++ b/Engine/Engine/imgui.ini
@@ -9,12 +9,42 @@ Size=550,680
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=692,189
-Size=664,398
-Collapsed=1
+Pos=884,119
+Size=500,300
+Collapsed=0
 
 [Window][Another Window]
 Pos=113,165
 Size=470,218
+Collapsed=0
+
+[Window][!!!Demo Work place!!!]
+Pos=4,4
+Size=186,402
+Collapsed=0
+
+[Window][compilate project]
+Pos=194,6
+Size=261,103
+Collapsed=0
+
+[Window][create object]
+Pos=218,118
+Size=259,104
+Collapsed=0
+
+[Window][Options]
+Pos=193,4
+Size=227,508
+Collapsed=0
+
+[Window][###EmptyPath]
+Pos=380,260
+Size=245,74
+Collapsed=0
+
+[Window][linkage project]
+Pos=198,5
+Size=308,106
 Collapsed=0
 
